--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "schema-utils": "^1.0.0"
   },
   "peerDependencies": {
-    "webpack": "^1.0.0 || ^2.0.0 || ^3.0.0  || ^4.0.0"
+    "webpack": "^1.0.0 || ^2.0.0 || ^3.0.0  || ^4.0.0 || ^5.0.0"
   },
   "keywords": [
     "angular-templatecache-webpack-plugin",
