--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "glob": "^7.1.6",
+    "glob-parent": "^5.1.1",
     "jsesc": "^3.0.2",
     "lodash.template": "^4.5.0",
     "schema-utils": "^3.1.1"
